service_bff.yaml
apiVersion: v1
kind: Service
metadata:
  name: common-service
spec:
  selector:
    app: my-app
  ports:
  - protocol: TCP
    name: frontend
    port: 80
    targetPort: 80
  - protocol: TCP
    name: backend
    port: 8080
    targetPort: 8080
